--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,13 @@
             <scope>test</scope>
         </dependency>
 
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.6.4</version>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
