--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,16 @@ mybatis.type-aliases-package=com.nowcoder.community.entity
 mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
-# logger
-logging.level.com.nowcoder.community=debug
+# MailProperties
+spring.mail.host=smtp.sina.com
+spring.mail.port=465
+spring.mail.username=keyman_study@sina.com
+spring.mail.password=2aab0edc28a6fbd6
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+## logger
+#logging.level.com.nowcoder.community=debug
+#
+## set logger file path
+#logging.file=d:/work/data/nowcoder/community/community.log
