--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,13 @@ spring.mail.password=2aab0edc28a6fbd6
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.ssl.enable=true
 
+#community
+community.path.domain=http://localhost:8080
+
+# upload path
+community.path.upload=d:/work/data/upload
+
+
 ## logger
 #logging.level.com.nowcoder.community=debug
 #
