--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,10 @@ community.path.domain=http://localhost:8080
 # upload path
 community.path.upload=d:/work/data/upload
 
+# RedisProperties
+spring.redis.database=11
+spring.redis.host=localhost
+spring.redis.port=6379
 
 ## logger
 #logging.level.com.nowcoder.community=debug
