--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,6 +40,12 @@ spring.redis.database=11
 spring.redis.host=localhost
 spring.redis.port=6379
 
+# RedisProperties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=community-consumer-group
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=3000
+
 ## logger
 #logging.level.com.nowcoder.community=debug
 #
