--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,6 +56,11 @@ spring.quartz.properties.org.quartz.jobStore.isClustered=true
 spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
 spring.quartz.properties.org.quartz.threadPool.threadCount=5
 
+# caffeine
+# caffeine.posts.max-size：缓存空间中最多缓存多少数据
+caffeine.posts.max-size=15
+caffeine.posts.expire-seconds=180
+
 ## logger
 #logging.level.com.nowcoder.community=debug
 #
